Added module-info to all modules.. All builds and passes with the acception of azure module that needs work thanks to okhttp dependency, which is excluded from build for now.