@@ -8,3 +8,14 @@ dependencies {
 }
 
 description = "encryption-jnacl"
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                "--module-path", classpath.asPath,
+                "--add-modules", "jnacl",
+        ]
+        classpath = files()
+    }
+}
+
