@@ -4,11 +4,15 @@ plugins {
 
 dependencies {
     implementation project(":server:server-api")
+    implementation project(":server:server-utils")
     implementation project(":config")
     implementation project(":security")
     implementation "jakarta.xml.bind:jakarta.xml.bind-api"
     implementation "org.glassfish.jersey.media:jersey-media-moxy"
-    implementation "org.glassfish.jersey.core:jersey-server"
+    implementation("org.glassfish.jersey.core:jersey-server") {
+        exclude group: "javax.validation"
+        exclude group: "javax.annotation"
+    }
     implementation "org.glassfish.jersey.ext:jersey-bean-validation"
     implementation "org.slf4j:jul-to-slf4j"
     implementation "org.glassfish.jersey.containers:jersey-container-servlet-core"
@@ -17,13 +21,26 @@ dependencies {
     implementation "org.eclipse.jetty:jetty-servlet"
     implementation "org.glassfish.jersey.inject:jersey-hk2"
     implementation "org.glassfish.jersey.core:jersey-common"
-    implementation project(":server:server-utils")
+
 }
 
 description = "jersey-server"
 
 jacocoTestCoverageVerification {
     enabled false
+}
+
+compileJava {
+    //inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'jul.to.slf4j',
+                '--add-modules', 'jersey.server',
+                '--add-modules', 'jersey.container.servlet.core'
+        ]
+        classpath = files()
+    }
 }
 
 
