@@ -1,3 +1,17 @@
+plugins {
+    id "java-library"
+}
+
 dependencies {
     compileOnly 'org.glassfish:jakarta.el'
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                "--module-path", classpath.asPath,
+                "--add-modules", "jakarta.el",
+        ]
+        classpath = files()
+    }
 }
